--- a/styles.css
+++ b/styles.css
@@ -13,7 +13,11 @@ header {
 }
 
 .portada img{
-    width:250px;
+     width: 100%;
+    height: auto;
+    max-height: 200px;
+    object-fit: cover;
+    border-radius: 5px;
 }
 
 nav ul {
